Finished some todos